--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -21,7 +21,7 @@
       </span>
 
       <div class="top-bar-title">
-        <span>Hello World 2</span>
+        <span>Hello World Production</span>
         <%= link_to root_path, accesskey: "0" do %>
           <%= image_tag(image_path_for("logo_header.png"), class: "float-left", alt: t("layouts.header.logo")) %>
         <% end %>
