--- a/app/assets/stylesheets/custom/_welcome.scss
+++ b/app/assets/stylesheets/custom/_welcome.scss
@@ -4,66 +4,93 @@
   
  .home-page {
 
-    .background-header {
-        display: none;
-    }
-    
-    .jumbo {
-        background: #ffffff image-url("welcome/background_header_small.jpg");
-        background-position: bottom;
+  .background-header {
+      display: none;
+  }
+  
+  .jumbo {
+      background: #ffffff image-url("welcome/background_header_small.jpg");
+      background-position: bottom;
+      background-repeat: no-repeat;
+      padding-bottom: rem-calc(300);
+  
+      @include breakpoint(small) {
+          background: image-url("welcome/background_header_small.jpg");
+          background-size: 100% auto;
+          background-repeat: no-repeat;
+          padding-bottom: rem-calc(5);
+          }
+  
+      @include breakpoint(medium) {
+          background: image-url("welcome/background_header_small.jpg");
+          background-size: 100% auto;
+          background-repeat: no-repeat;
+          min-height: 500px;
+          }    
+  
+      @include breakpoint(large) {
+          background: image-url("welcome/background_header_small.jpg");
+          background-size: 100% auto;
+          background-repeat: no-repeat;
+          min-height: 600px;
+          }       
+  
+      @include breakpoint(xlarge) {
+          background: image-url("welcome/background_header_small.jpg");
+          background-size: 100% auto;
+          background-repeat: no-repeat;
+          } 
+              
+      @include breakpoint(xxlarge) {
+        background: image-url("welcome/background_header_small.jpg");
+        background-size: 100% auto;
         background-repeat: no-repeat;
-        padding-bottom: rem-calc(300);
-    
-        @include breakpoint(medium) {
-            background: image-url("welcome/background_header_small.jpg");
-            background-size: 100% auto;
-            background-repeat: no-repeat;
-            }
-    
-    
-        .small-12.medium-6.column.medium-9.small {
-            margin-top: rem-calc(0);
-    
-    
-            @include breakpoint(medium) {
-                margin-top: rem-calc(20);
-            }
-    
-            @include breakpoint(large) {
-                margin-top: rem-calc(30);
-            }
-    
-            @include breakpoint(xxlarge) {
-                margin-top: rem-calc(120);
-                background-size: 1000% auto;
-            }
-        }
-    
-        .lead {
-        color: $brand;
-        font-size: rem-calc(30);
-        font-weight: 700;
-        line-height: rem-calc(30);
-    
-        @include breakpoint(medium) {
-            font-size: rem-calc(40);
-            line-height: rem-calc(40);
-        }
-        
-        @include breakpoint(large) {
-            font-size: rem-calc(50);
-            line-height: rem-calc(50);
-        }
-            
-        @include breakpoint(xxlarge) {
-            font-size: rem-calc(60);
-            line-height: rem-calc(60);
-        }
-        }
-    
-        .button {
-        background: $brand;
-        color: #fff;
-        }
-    }
-    }
+        min-height: 1080px;
+        } 
+
+      .small-12.medium-6.column.medium-9.small {
+          margin-top: rem-calc(0);
+  
+  
+          @include breakpoint(medium) {
+              margin-top: rem-calc(20);
+          }
+  
+          @include breakpoint(large) {
+              margin-top: rem-calc(30);
+          }
+  
+          @include breakpoint(xxlarge) {
+              margin-top: rem-calc(120);
+              background-size: 1000% auto;
+          }
+      }
+  
+      .lead {
+      color: $brand;
+      font-size: rem-calc(30);
+      font-weight: 700;
+      line-height: rem-calc(30);
+  
+      @include breakpoint(medium) {
+          font-size: rem-calc(40);
+          line-height: rem-calc(40);
+      }
+      
+      @include breakpoint(large) {
+          font-size: rem-calc(50);
+          line-height: rem-calc(50);
+      }
+          
+      @include breakpoint(xxlarge) {
+          font-size: rem-calc(60);
+          line-height: rem-calc(60);
+      }
+      }
+  
+      .button {
+      background: $brand;
+      color: #fff;
+      }
+  }
+  }
