--- a/app/assets/stylesheets/custom/_welcome.scss
+++ b/app/assets/stylesheets/custom/_welcome.scss
@@ -53,15 +53,19 @@
   
   
           @include breakpoint(medium) {
-              margin-top: rem-calc(20);
+              margin-top: rem-calc(85);
           }
   
           @include breakpoint(large) {
-              margin-top: rem-calc(30);
+              margin-top: rem-calc(130);
           }
-  
+   
+          @include breakpoint(xlarge) {
+            margin-top: rem-calc(220);
+            background-size: 1000% auto;
+        } 
           @include breakpoint(xxlarge) {
-              margin-top: rem-calc(200);
+              margin-top: rem-calc(320);
               background-size: 1000% auto;
           }
       }
