--- a/app/views/management/proposals/new.html.erb
+++ b/app/views/management/proposals/new.html.erb
@@ -6,7 +6,7 @@
 
   <div class="small-12 medium-9 column end">
     <h2><%= t("management.proposals.create_proposal") %></h2>
-    <%= render "proposals/form", form_url: management_proposals_path %>
+    <%= render "proposals/form", form_url: proposals_path %>
   </div>
 
 </div>
