--- a/app/assets/stylesheets/custom/_welcome.scss
+++ b/app/assets/stylesheets/custom/_welcome.scss
@@ -66,8 +66,16 @@
           }
       }
   
+      h1 {
+        color: #fff;
+      }
+
+      span {
+        color: #fff;
+      }
+
       .lead {
-      color: $brand;
+      color: $white;
       font-size: rem-calc(30);
       font-weight: 700;
       line-height: rem-calc(30);
