--- a/app/views/debates/show.html.erb
+++ b/app/views/debates/show.html.erb
@@ -42,7 +42,7 @@
       </div>
 
       <aside class="small-12 medium-3 column">
-        <% if current_user && @debate.editable_by?(current_user) %>
+        <% if current_user && @debate.editable_by?(current_user) || current_administrator? %>
           <div class="sidebar-divider"></div>
           <h2><%= t("debates.show.author") %></h2>
           <%= link_to edit_debate_path(@debate), class: "button hollow expanded" do %>
